--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,15 +26,15 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "API_SEARCH_SUGGESTIONS_URL", "\"https://http2.mlstatic.com\"")
             buildConfigField("String", "API_URL", "\"https://api.mercadolibre.com\"")
-            buildConfigField("String", "SITE_ID", "\"MLC\"")
         }
 
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "API_SEARCH_SUGGESTIONS_URL", "\"https://http2.mlstatic.com\"")
             buildConfigField("String", "API_URL", "\"https://api.mercadolibre.com\"")
-            buildConfigField("String", "SITE_ID", "\"MLC\"")
         }
     }
     compileOptions {
@@ -60,6 +60,9 @@ dependencies {
     // Network
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // Image rendering
+    implementation("io.coil-kt:coil:2.2.2")
 
     // Dependency Injection
     implementation("io.insert-koin:koin-core:3.4.0")
