--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,11 @@ android {
     buildFeatures {
         viewBinding true
         buildConfig true
+        compose true
     }
-
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.4.0'
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -62,13 +65,30 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     // Image rendering
-    implementation("io.coil-kt:coil:2.2.2")
+    implementation('io.coil-kt:coil:2.5.0')
 
     // Dependency Injection
-    implementation("io.insert-koin:koin-core:3.4.0")
-    implementation("io.insert-koin:koin-android:3.4.0")
+    implementation('io.insert-koin:koin-core:3.5.0')
+    implementation('io.insert-koin:koin-android:3.5.0')
+    implementation('io.insert-koin:koin-androidx-compose:3.5.0')
+
+    // Compose
+    implementation 'androidx.activity:activity-compose:1.8.0'
+    implementation platform('androidx.compose:compose-bom:2023.10.01')
+    implementation 'androidx.compose.ui:ui'
+    implementation 'androidx.compose.ui:ui-graphics'
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation("androidx.compose.runtime:runtime-livedata:1.5.4")
+    implementation 'androidx.compose.material3:material3'
+    implementation("io.coil-kt:coil-compose:2.2.2")
+    implementation("com.google.accompanist:accompanist-pager:0.27.1")
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.28.0"
 
     testImplementation 'junit:junit:4.13.2'
+    debugImplementation 'androidx.compose.ui:ui-tooling'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation platform('androidx.compose:compose-bom:2023.10.01')
 }
