--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,12 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.MercadoLibreCandidate"
         tools:targetApi="31">
+        <activity
+            android:name=".scenes.detaileditem.DetailedItemActivity"
+            android:exported="false" />
         <activity
             android:name=".scenes.MainActivity"
             android:exported="true">
